kustomize/vault-stack/linkwarden/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: linkwarden
  labels:
    app: linkwarden
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - aloy
                - ellie
                - joel
      containers:
      - name: linkwarden
        image: ghcr.io/linkwarden/linkwarden:latest
        ports:
        - name: linkwarden
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 15
        volumeMounts:
        - name: linkwarden
          mountPath: /pfs
      volumes:
      - name: linkwarden
        persistentVolumeClaim:
          claimName: linkwarden
