kustomize/vault-stack/linkwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
spec:
  selector:
    app: linkwarden
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: linkwarden
