kustomize/vault-stack/linkwarden/linkwarden-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkwarden
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`linkwarden-k8s.vinicima.com`) || Host(`linkwarden.vinicima.com`)
      kind: Rule
      services:
        - name: linkwarden
          port: 3000
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
